--- a/ezugi_staging_backend_framework_automation/test-output/emailable-report.html
+++ b/ezugi_staging_backend_framework_automation/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,454</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,945</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">providerTestCases.Authentication_0_Test</td><td><a href="#m0">auth0_AuthenticationValidTest</a></td><td rowspan="1">1730192196170</td><td rowspan="1">1319</td></tr><tr class="passedeven"><td><a href="#m1">auth0_GetURLValidTest</a></td><td rowspan="1">1730192191874</td><td rowspan="1">4046</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testpac.EzugiTest</td><td><a href="#m0">creditValidTest</a></td><td rowspan="1">1731070970351</td><td rowspan="1">36696</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">providerTestCases.Authentication_0_Test#auth0_AuthenticationValidTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">providerTestCases.Authentication_0_Test#auth0_GetURLValidTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testpac.EzugiTest#creditValidTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
