--- a/ezugi_staging_backend_framework_automation/test-output/emailable-report.html
+++ b/ezugi_staging_backend_framework_automation/test-output/emailable-report.html
@@ -9,20 +9,43 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">11</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43,947</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">6,565</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="11">ezugi_api_Test.GetUrlAPITest</td><td><a href="#m0">getURLAPIMissingParametersTest</a></td><td rowspan="1">1731403377909</td><td rowspan="1">16307</td></tr><tr class="passedeven"><td><a href="#m1">getURLInvalidOperatorIdTest</a></td><td rowspan="3">1731403398166</td><td rowspan="3">2609</td></tr><tr class="passedeven"><td><a href="#m2">getURLInvalidOperatorIdTest</a></td></tr><tr class="passedeven"><td><a href="#m3">getURLInvalidOperatorIdTest</a></td></tr><tr class="passedeven"><td><a href="#m4">getURLInvalidPlayerIdTest</a></td><td rowspan="3">1731403403966</td><td rowspan="3">1515</td></tr><tr class="passedeven"><td><a href="#m5">getURLInvalidPlayerIdTest</a></td></tr><tr class="passedeven"><td><a href="#m6">getURLInvalidPlayerIdTest</a></td></tr><tr class="passedeven"><td><a href="#m7">getURLInvalidTokenTest</a></td><td rowspan="3">1731403410894</td><td rowspan="3">1860</td></tr><tr class="passedeven"><td><a href="#m8">getURLInvalidTokenTest</a></td></tr><tr class="passedeven"><td><a href="#m9">getURLInvalidTokenTest</a></td></tr><tr class="passedeven"><td><a href="#m10">getURLValidTest</a></td><td rowspan="1">1731403417129</td><td rowspan="1">3285</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">authenticationTest.AuthenticationValidTest</td><td><a href="#m0">authenticationValidTest</a></td><td rowspan="1">1731489789893</td><td rowspan="1">1160</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">ezugi_api_Test.GetUrlAPITest</td><td><a href="#m1">getURLValidTest</a></td><td rowspan="1">1731489785468</td><td rowspan="1">4162</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">ezugi_api_Test.GetUrlAPITest#getURLAPIMissingParametersTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ezugi_api_Test.GetUrlAPITest#getURLInvalidOperatorIdTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>null</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ezugi_api_Test.GetUrlAPITest#getURLInvalidOperatorIdTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">ezugi_api_Test.GetUrlAPITest#getURLInvalidOperatorIdTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>84c5ce1d-e6b5-4e64-80c6-805118b11366</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">ezugi_api_Test.GetUrlAPITest#getURLInvalidPlayerIdTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">ezugi_api_Test.GetUrlAPITest#getURLInvalidPlayerIdTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>null</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">ezugi_api_Test.GetUrlAPITest#getURLInvalidPlayerIdTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>015290dd-7753-465b-a254-0f34d3a6f759</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">ezugi_api_Test.GetUrlAPITest#getURLInvalidTokenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">ezugi_api_Test.GetUrlAPITest#getURLInvalidTokenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>null</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">ezugi_api_Test.GetUrlAPITest#getURLInvalidTokenTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>66e04264-e690-42f1-a376-9a1c7b016615</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">ezugi_api_Test.GetUrlAPITest#getURLValidTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">authenticationTest.AuthenticationValidTest#authenticationValidTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	Mismatch in value for parameter: token expected [d628b6d5-cfe0-41d1-89c4-d4964e76995c] but found [2712dd32-8386-4610-b361-ebb1329f0aa5]
+	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:46)
+	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:30)
+	at api_genericutility.ApiResponseValidator2.validateResponse(ApiResponseValidator2.java:48)
+	at authenticationTest.AuthenticationValidTest.authenticationValidTest(AuthenticationValidTest.java:42)
+	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
+	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:686)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
+	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
+	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:992)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
+	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
+	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+	at org.testng.TestRunner.privateRun(TestRunner.java:739)
+	at org.testng.TestRunner.run(TestRunner.java:614)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
+	at org.testng.TestNG.runSuites(TestNG.java:1112)
+	at org.testng.TestNG.run(TestNG.java:1079)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">ezugi_api_Test.GetUrlAPITest#getURLValidTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
