--- a/ezugi_staging_backend_framework_automation/test-output/index.html
+++ b/ezugi_staging_backend_framework_automation/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\User183\AppData\Local\Temp\testng-eclipse-1560210870\testng-customsuite.xml</span>
+                    <span>C:\Users\User183\AppData\Local\Temp\testng-eclipse--293192301\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,24 +103,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="authenticationTest.AuthenticationValidTest" class="method navigator-link" hash-for-method="authenticationValidTest">authenticationValidTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="providerTest.DebitTest" class="method navigator-link" hash-for-method="debitValidTest">debitValidTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ezugi_api_Test.GetUrlAPITest" class="method navigator-link" hash-for-method="getURLValidTest">getURLValidTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -135,20 +121,17 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">authenticationTest.AuthenticationValidTest</span>
+              <span class="class-name">providerTest.DebitTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="authenticationValidTest">
-                  </a> <!-- authenticationValidTest -->
-                  <span class="method-name">authenticationValidTest</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	Mismatch in value for parameter: token expected [d628b6d5-cfe0-41d1-89c4-d4964e76995c] but found [2712dd32-8386-4610-b361-ebb1329f0aa5]
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:46)
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:30)
-	at api_genericutility.ApiResponseValidator2.validateResponse(ApiResponseValidator2.java:48)
-	at authenticationTest.AuthenticationValidTest.authenticationValidTest(AuthenticationValidTest.java:42)
+                  <a name="debitValidTest">
+                  </a> <!-- debitValidTest -->
+                  <span class="method-name">debitValidTest</span>
+                  <div class="stack-trace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
+	at baseapi.BaseApiClass.getBalance(BaseApiClass.java:125)
+	at providerTest.DebitTest.debitValidTest(DebitTest.java:19)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -181,25 +164,10 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">ezugi_api_Test.GetUrlAPITest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="getURLValidTest">
-                  </a> <!-- getURLValidTest -->
-                  <span class="method-name">getURLValidTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\User183\AppData\Local\Temp\testng-eclipse-1560210870\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\User183\AppData\Local\Temp\testng-eclipse--293192301\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,16 +176,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;authenticationTest.AuthenticationValidTest&quot;&gt;
+      &lt;class name=&quot;providerTest.DebitTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;authenticationValidTest&quot;/&gt;
+          &lt;include name=&quot;debitValidTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- authenticationTest.AuthenticationValidTest --&gt;
-      &lt;class name=&quot;ezugi_api_Test.GetUrlAPITest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;getURLValidTest&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- ezugi_api_Test.GetUrlAPITest --&gt;
+      &lt;/class&gt; &lt;!-- providerTest.DebitTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -231,7 +194,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (2 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -257,20 +220,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getURLValidTest')
-data.setCell(0, 2, 'ezugi_api_Test.GetUrlAPITest')
-data.setCell(0, 3, 4162);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'authenticationValidTest')
-data.setCell(1, 2, 'authenticationTest.AuthenticationValidTest')
-data.setCell(1, 3, 1160);
+data.setCell(0, 1, 'debitValidTest')
+data.setCell(0, 2, 'providerTest.DebitTest')
+data.setCell(0, 3, 3170);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,22 +244,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">ezugi_api_Test.GetUrlAPITest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">getURLInvalidOperatorIdTest</span>
-                <br/>
-                <span class="ignored-method-name">getURLInvalidPlayerIdTest</span>
-                <br/>
-                <span class="ignored-method-name">getURLAPIMissingParametersTest</span>
-                <br/>
-                <span class="ignored-method-name">getURLInvalidTokenTest</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -309,27 +255,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">ezugi_api_Test.GetUrlAPITest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">providerTest.DebitTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">variables</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">getURLValidTest</span>
-                <span class="method-start">943 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">authenticationTest.AuthenticationValidTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">variables</span>
-                <span class="method-start">5114 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">authenticationValidTest</span>
-                <span class="method-start">5368 ms</span>
+                <span class="method-name">debitValidTest</span>
+                <span class="method-start">831 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
